--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/homePage.css">
     <link rel="stylesheet" href="assets/css/itemForm.css">
     <link rel="stylesheet" href="assets/css/orderForm.css">
+    <link rel="stylesheet" href="assets/css/orderDetailsForm.css">
 
 </head>
 <body>
@@ -43,7 +44,7 @@
                     <a class="nav-link gradient-text" id="item_page" href="#item">Item</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link gradient-text" id="order_page" href="#Order">Order</a>
+                    <a class="nav-link gradient-text" id="order_page" href="#order">Order</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link gradient-text" id="order_details_page" href="#orderDetails"><button type="button">Order Details</button></a>
@@ -133,63 +134,62 @@
 <!--Add Customer page section-->
 <main id="customer" class="customer">
     <div class="customer1">
-        <div class="container text-left m-5" id="customerDetails">
-            <div class="row">
-                <div class="text-center m-3">
+        <div class="col-md-4 mt-3">
+            <div class="card" id="customerManage">
+                <div class="card-header text-center gradient-text">
                     <h3>Customer Manage</h3>
                 </div>
-            </div>
-
-            <div class="row">
-                <div class="col col-lg-6 col-md-12 col-sm-12 col-12">
-                    <form>
-                        <div class="mb-3">
-                            <label for="customerId" class="form-label">Customer Id :</label>
-                            <input type="text" class="form-control" id="customerId">
-                        </div>
-                        <div class="mb-3">
-                            <label for="customerName" class="form-label">Customer Name :</label>
-                            <input type="text" class="form-control" id="customerName">
-                        </div>
-                        <div class="mb-3">
-                            <label for="address" class="form-label">Address :</label>
-                            <input type="email" class="form-control" id="address">
-                        </div>
-                        <div class="mb-3">
-                            <label for="mobile" class="form-label">Mobile :</label>
-                            <input type="tel" class="form-control" id="mobile">
-                        </div>
-                        <div class="mt-3" id="customer_btn">
-                            <button type="button" class="btn btn-outline-success">Submit</button>
-                            <button type="button" class="btn btn-outline-primary">Update</button>
-                            <button type="button" class="btn btn-outline-danger">Delete</button>
-                            <button type="button" class="btn btn-outline-warning">Reset</button>
-                        </div>
-                    </form>
-                </div>
+                <form>
+                    <div class="m-3 col-md-11">
+                        <label for="customerId" class="form-label">Customer Id :</label>
+                        <input type="text" class="form-control" id="customerId">
+                    </div>
+                    <div class="m-3 col-md-11">
+                        <label for="customerName" class="form-label">Customer Name :</label>
+                        <input type="text" class="form-control" id="customerName">
+                    </div>
+                    <div class="m-3 col-md-11">
+                        <label for="address" class="form-label">Address :</label>
+                        <input type="email" class="form-control" id="address">
+                    </div>
+                    <div class="m-3 col-md-11">
+                        <label for="mobile" class="form-label">Mobile :</label>
+                        <input type="tel" class="form-control" id="mobile">
+                    </div>
+                    <div class="m-3 col-md-11" id="customer_btn">
+                        <button type="button" class="btn btn-outline-success">Submit</button>
+                        <button type="button" class="btn btn-outline-primary">Update</button>
+                        <button type="button" class="btn btn-outline-danger">Delete</button>
+                        <button type="button" class="btn btn-outline-warning">Reset</button>
+                    </div>
+                </form>
             </div>
         </div>
 
-        <div class="container text-center m-5" id="viewCustomer">
-
-            <div class="row">
-                <div class="text-center m-3">
+        <div class="col-md-4 mt-3">
+            <div class="card" id="viewCustomer">
+                <div class="card-header text-center gradient-text">
                     <h3>View Customers</h3>
                 </div>
-            </div>
 
-            <div class="col col-lg-6 col-md-12 col-sm-12 col-12">
-                <table class="table">
-                    <thead class="table-color">
-                    <tr>
-                        <th scope="col">Customer ID</th>
-                        <th scope="col">Customer Name</th>
-                        <th scope="col">Address</th>
-                        <th scope="col">Mobile</th>
-                    </tr>
-                    </thead>
-                    <tbody id="customer-tbl-body"></tbody>
-                </table>
+                <form class="d-flex" role="search">
+                    <input id="searchField2" class="form-control me-3 searchField" type="search" placeholder="Search" aria-label="Search">
+                    <button id="search2" class="btn btn-outline-success searchBtn" type="button">Search</button>
+                </form>
+
+                <div class="col m-3">
+                    <table class="table" id="customerTable">
+                        <thead class="table-color">
+                        <tr>
+                            <th scope="col">Customer ID</th>
+                            <th scope="col">Customer Name</th>
+                            <th scope="col">Address</th>
+                            <th scope="col">Mobile</th>
+                        </tr>
+                        </thead>
+                        <tbody id="customer-tbl-body"></tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
@@ -198,68 +198,63 @@
 <!--Add Item page section-->
 <main id="item" class="item">
     <div class="item1">
-        <div class="container text-left m-5" id="itemDetails">
-            <div class="row">
-                <div class="text-center m-3">
+
+        <div class="col-md-4 mt-3">
+            <div class="card" id="itemManage">
+                <div class="card-header text-center gradient-text">
                     <h3>Item Manage</h3>
                 </div>
-            </div>
-
-            <div class="row">
-                <div class="col col-lg-6 col-md-12 col-sm-12 col-12">
-                    <form>
-                        <div class="mb-3">
-                            <label for="itemId" class="form-label">item code :</label>
-                            <input type="text" class="form-control" id="itemId">
-                        </div>
-                        <div class="mb-3">
-                            <label for="itemName" class="form-label">item Description :</label>
-                            <input type="text" class="form-control" id="itemName">
-                        </div>
-                        <div class="mb-3">
-                            <label for="address" class="form-label">Price :</label>
-                            <input type="email" class="form-control" id="price">
-                        </div>
-                        <div class="mb-3">
-                            <label for="mobile" class="form-label">Qty :</label>
-                            <input type="tel" class="form-control" id="qty">
-                        </div>
-                        <div class="mt-3" id="item_btn">
-                            <button type="button" class="btn btn-outline-success">Submit</button>
-                            <button type="button" class="btn btn-outline-primary">Update</button>
-                            <button type="button" class="btn btn-outline-danger">Delete</button>
-                            <button type="reset" class="btn btn-outline-warning">Reset</button>
-                        </div>
-                    </form>
-                </div>
+                <form>
+                    <div class="m-3 col-md-11">
+                        <label for="itemId" class="form-label">item code :</label>
+                        <input type="text" class="form-control" id="itemId">
+                    </div>
+                    <div class="m-3 col-md-11">
+                        <label for="itemName" class="form-label">item Description :</label>
+                        <input type="text" class="form-control" id="itemName">
+                    </div>
+                    <div class="m-3 col-md-11">
+                        <label for="address" class="form-label">Price :</label>
+                        <input type="email" class="form-control" id="price">
+                    </div>
+                    <div class="m-3 col-md-11">
+                        <label for="mobile" class="form-label">Qty :</label>
+                        <input type="tel" class="form-control" id="qty">
+                    </div>
+                    <div class="m-3 col-md-11" id="item_btn">
+                        <button type="button" class="btn btn-outline-success">Submit</button>
+                        <button type="button" class="btn btn-outline-primary">Update</button>
+                        <button type="button" class="btn btn-outline-danger">Delete</button>
+                        <button type="reset" class="btn btn-outline-warning">Reset</button>
+                    </div>
+                </form>
             </div>
         </div>
 
-        <div class="container text-center m-5" id="selectItem">
-
-            <div class="row">
-                <div class="text-center m-3">
+        <div class="col-md-4 mt-3">
+            <div class="card" id="viewItem">
+                <div class="card-header text-center gradient-text">
                     <h3>View Items</h3>
                 </div>
-            </div>
 
-            <form class="d-flex" role="search">
-                <input id="searchField1" class="form-control me-3 searchField" type="search" placeholder="Search" aria-label="Search">
-                <button id="search1" class="btn btn-outline-success searchBtn" type="button">Search</button>
-            </form>
+                <form class="d-flex" role="search">
+                    <input id="searchField3" class="form-control me-3 searchField" type="search" placeholder="Search" aria-label="Search">
+                    <button id="search3" class="btn btn-outline-success searchBtn" type="button">Search</button>
+                </form>
 
-            <div class="col col-lg-6 col-md-12 col-sm-12 col-12">
-                <table class="table">
-                    <thead class="table-color">
-                    <tr>
-                        <th scope="col">Item Code</th>
-                        <th scope="col">Item Description</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Qty</th>
-                    </tr>
-                    </thead>
-                    <tbody id="item-tbl-body"></tbody>
-                </table>
+                <div class="col m-3">
+                    <table class="table" id="itemTable">
+                        <thead class="table-color">
+                        <tr>
+                            <th scope="col">Item Code</th>
+                            <th scope="col">Item Description</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Qty</th>
+                        </tr>
+                        </thead>
+                        <tbody id="item-tbl-body"></tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
@@ -384,6 +379,42 @@
     </div>
 </main>
 
+<!--Add OrderDetails page section-->
+<main id="order_Details" class="order_Details">
+    <div class="order_details1">
+        <div class="col-md-4 mt-3">
+            <div class="card" id="orderDetailsForm">
+                <div class="card-header text-center gradient-text">
+                    <h3>Order Details</h3>
+                </div>
+
+                <form class="d-flex" role="search">
+                    <input id="searchField4" class="form-control me-3 searchField" type="search" placeholder="Search" aria-label="Search">
+                    <button id="search4" class="btn btn-outline-success searchBtn" type="button">Search</button>
+                </form>
+
+                <div class="col m-3">
+                    <table class="table" id="order-details-table">
+                        <thead class="table-color">
+                        <tr>
+                            <th scope="col">Order Id</th>
+                            <th scope="col">Order Date</th>
+                            <th scope="col">Customer Id</th>
+                            <th scope="col">Total</th>
+                            <th scope="col">Discount</th>
+                            <th scope="col">Sub Total</th>
+                            <th scope="col">Cash</th>
+                            <th scope="col">Balance</th>
+                        </tr>
+                        </thead>
+                        <tbody id="order-details-tbody"></tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
 
 <script src="assets/script/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -395,6 +426,7 @@
 <script type="module" src="controller/CustomerController.js"></script>
 <script type="module" src="controller/ItemController.js"></script>
 <script type="module" src="controller/OrderController.js"></script>
+<script type="module" src="controller/orderDetailsController.js"></script>
 
 
 </body>
